--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <h1>deployment</h1>
+    <h1>deployment</h1
     <button><a href="about.html">About Us</a></button>
 </body>
 </html>
